# storage/api-docs/api-docs.json
@@ -84,6 +84,84 @@
                 }
             }
         },
+        "/api/prospek": {
+            "get": {
+                "tags": [
+                    "Prospek"
+                ],
+                "operationId": "be36f518d68cf74146e9522ca0b78d68",
+                "responses": {
+                    "200": {
+                        "description": "Get All Data Prospek"
+                    }
+                }
+            }
+        },
+        "/api/prospek-home": {
+            "get": {
+                "tags": [
+                    "Prospek"
+                ],
+                "operationId": "23466bc83e7f5622595e352079d89b20",
+                "responses": {
+                    "200": {
+                        "description": "Get All Data Prospek By Home"
+                    }
+                }
+            }
+        },
+        "/api/prospek/{id}": {
+            "get": {
+                "tags": [
+                    "Prospek"
+                ],
+                "operationId": "2bece85319cba9477332ae936d09c4cc",
+                "responses": {
+                    "200": {
+                        "description": "Get All By Departement ID"
+                    }
+                }
+            }
+        },
+        "/api/kurikulum": {
+            "get": {
+                "tags": [
+                    "Kurikulum"
+                ],
+                "operationId": "24eb5af86ff62e324361d54a76b17f7e",
+                "responses": {
+                    "200": {
+                        "description": "Get All Data Kurikulum"
+                    }
+                }
+            }
+        },
+        "/api/kurikulum-home": {
+            "get": {
+                "tags": [
+                    "Kurikulum"
+                ],
+                "operationId": "46382f45e342dfa0434e15a2ab6b57f3",
+                "responses": {
+                    "200": {
+                        "description": "Get All Data Kurikulum By Home"
+                    }
+                }
+            }
+        },
+        "/api/kurikulum/{id}": {
+            "get": {
+                "tags": [
+                    "Kurikulum"
+                ],
+                "operationId": "fcd4d66f70c29ba9d73381433a396625",
+                "responses": {
+                    "200": {
+                        "description": "Get All By Departement ID"
+                    }
+                }
+            }
+        },
         "/api/fasilitas": {
             "get": {
                 "tags": [
@@ -233,6 +311,17 @@
                     "Testimoni"
                 ],
                 "operationId": "63c9471a5c141e51caebb1251cba3c6e",
+                "parameters": [
+                    {
+                        "name": "ID",
+                        "in": "path",
+                        "description": "Id of the departement",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Get All Data Testimoni By Id Departement"
@@ -500,12 +589,12 @@
                 }
             }
         },
-        "/api/indentity/{id}": {
+        "/api/indentity": {
             "get": {
                 "tags": [
                     "Identity"
                 ],
-                "operationId": "682b4ae81c0c3f06c370d230c08f010a",
+                "operationId": "da93111795699e9fdbea8033f48f7405",
                 "responses": {
                     "200": {
                         "description": "Get All Data indentity one"
@@ -578,6 +667,14 @@
         {
             "name": "USP",
             "description": "USP"
+        },
+        {
+            "name": "Prospek",
+            "description": "Prospek"
+        },
+        {
+            "name": "Kurikulum",
+            "description": "Kurikulum"
         },
         {
             "name": "Fasilitas",
